# reckless-driving

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json
compat/: DrawSprocket.c  MacMemory.c  NumberFormatting.c  OSUtils.c  Sound.c  TextUtils.c  iShockXForce.c
extra/generate-stubs/: .eslintignore  .eslintrc.js  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
extra/generate-stubs/src/: index.ts
extra/resources/: Data.xml  Readme.rtf
extra/support/: MacOSX10.1.5.sdk.tar.xz
headers/: AGL_DSp.h  error.h  high.h  input.h  interface.h  objects.h  packs.h  preferences.h  roads.h  screen.h  sprites.h  vec2d.h
scratch/: missing_functions.sh  missing_functions.txt  missing_qd_functions.txt  qd_functions.txt
source/: AGL_DSp.c  CMakeLists.txt  HIDAccess.c  IsPortListValid.c  Makefile  error.c  files.txt  gameendseq.c  gameframe.c  gameinitexit.c  high.c  initexit.c  input.c  interface.c  objectCollision.c  packs.c  particlefx.c  pause.c  preferences.c  register.c  renderframe.c  renderframezoom.c  rle.c  roaddraw.c  screen.c  screenfx.c  sound.c  sprites.c  textfx.c
support/CarbonHeaders/: ConditionalMacros.h  DeskBus.h  MacTypes.h  TargetConditionals.h
support/Frameworks/AGL/: agl.h
support/Frameworks/CarbonCore/: fp.h
support/Frameworks/CoreServices/: CoreServices.h
support/Frameworks/HIDUtilities/: HID_Utilities_CFM.h
support/Frameworks/HIToolbox/: Events.h
support/Frameworks/InputSprocket/: HID.h  InputSprocket.h  InputSprocket.r
support/Frameworks/OT/: OpenTransport.h
support/Frameworks/QD/: QD.h
support/include/architecture/: alignment.h  byte_order.h
support/include/architecture/i386/: desc.h  fpu.h
support/include/mach/: boolean.h  boot_info.h  bootstrap.defs  bootstrap.h  clock.defs  clock.h  clock_priv.defs  clock_priv.h  clock_reply.defs  clock_types.defs  clock_types.h  error.h  errorlib.h  exc.defs  exception.h  exception_types.h  host_info.h  host_priv.defs  host_priv.h  host_security.defs  host_security.h  kern_return.h  kmod.h  ledger.defs  ledger.h  lock_set.defs  lock_set.h  mach.h  mach_error.h  mach_host.defs  mach_host.h  mach_init.h  mach_interface.h  mach_port.defs  mach_port.h  mach_syscalls.h  mach_time.h  mach_traps.h  mach_types.defs  mach_types.h  (+40 more)
support/include/mach/i386/: mach_i386.defs  mach_i386_server.h  ndr_def.h  thread_status.h
support/include/mach/machine/: asm.h  boolean.h  exception.h  kern_return.h  machine_types.defs  ndr_def.h  processor_info.h  rpc.h  syscall_sw.h  thread_state.h  thread_status.h  vm_param.h  vm_types.h
support/include/mach/ppc/: ndr_def.h  processor_info.h  rpc.h  syscall_sw.h
support/platform/: gl.h  gl_platform.h  windows_gl.h
